# Email-Responder

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  email.py  graph.py  main.py  pyproject.toml  syllabus.py
.github/workflows/: ci.yml
app/: main.py
app/agent/: graph.py
app/auth/: dependencies.py
app/database/: database.py
app/rag/: ingestion.py  retriever.py
app/routes/: auth.py  email_routes.py  syllabus.py
app/services/: gmail.py  polling.py
