[project]
name = "email-responder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "langchain>=1.3.12",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.4",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    "pinecone>=7.3.0",
    "pydantic>=2.13.4",
]
