[project]
name = "email-responder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.12",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.4",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.8",
    "pinecone>=7.3.0",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.51.0",
]
